<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:visible="true"
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_Profile" />

        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/menu_sync" />

        <item
            android:id="@+id/nav_view_incentive_report"
            android:icon="@drawable/ic_incentive_report"
            android:title="@string/menu_incentive_report" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logOut" />

    </group>
</menu>
